--- a/entregar.html
+++ b/entregar.html
@@ -1,103 +1,161 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Entregar Materiales</title>
+<meta charset="UTF-8">
+<title>Entregar Materiales</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+    body {
+        font-family: Arial;
+        background: #f0f2f5;
+        padding: 20px;
+        margin: 0;
+    }
+
+    .box {
+        background: white;
+        padding: 20px;
+        width: 100%;
+        max-width: 750px;
+        margin: auto;
+        margin-top: 10px;
+        border-radius: 12px;
+        box-shadow: 0 0 15px rgba(0,0,0,0.15);
+    }
+
+    h2 { text-align:center; }
+
+    .solicitud {
+        margin-bottom: 25px;
+        padding: 15px;
+        border-left: 5px solid #007bff;
+        background: #f8f9fa;
+        border-radius: 8px;
+    }
+
+    .solicitud h3 {
+        margin: 0 0 10px 0;
+        font-size: 18px;
+    }
+
+    .info p {
+        margin: 4px 0;
+        font-size: 15px;
+    }
+
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 12px;
+    }
+
+    th, td {
+        border: 1px solid #ccc;
+        padding: 10px;
+        font-size: 14px;
+    }
+
+    th {
+        background: #007bff;
+        color: white;
+        text-align: center;
+    }
+
+    td input[type="checkbox"] {
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+    }
+
+    .btnCompletar {
+        background: #28a745;
+        padding: 12px;
+        width: 100%;
+        border: none;
+        border-radius: 6px;
+        color: white;
+        font-size: 16px;
+        cursor: pointer;
+        margin-top: 15px;
+    }
+
+    .btnCompletar:hover { background: #218838; }
+
+    .btnVolver {
+        background: #6c757d;
+        padding: 12px;
+        width: 100%;
+        border: none;
+        border-radius: 6px;
+        color: white;
+        font-size: 17px;
+        cursor: pointer;
+        margin-top: 15px;
+    }
+
+</style>
 </head>
 <body>
 
-<h2>Solicitudes Pendientes</h2>
+<div class="box">
 
-<div id="listaSolicitudes"></div>
+    <h2>Solicitudes Pendientes</h2>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- PLANTILLA DE UNA SOLICITUD (VISUAL) -->
+    <div class="solicitud">
+        <h3>Solicitud #123</h3>
 
-<script>
-const supabaseClient = supabase.createClient(
-    "https://jwcgiuhdugjunndfpdjr.supabase.co",
-    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3Y2dpdWhkdWdqdW5uZGZwZGpyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NTA2NTQsImV4cCI6MjA3ODUyNjY1NH0.llknOTpK1hFMDOjdyDUKUFuiyr0NwwJzNv6YdJbBsRY"
-);
+        <div class="info">
+            <p><b>Fecha solicitud:</b> 2025-01-20</p>
+            <p><b>Docente:</b> Juan Pérez</p>
+            <p><b>Asignatura:</b> Electricidad II</p>
+            <p><b>Email:</b> docente@ejemplo.com</p>
+            <p><b>Estado:</b> pendiente</p>
+        </div>
 
-// ===============================
-// CARGAR SOLICITUDES PENDIENTES
-// ===============================
-async function cargarSolicitudesPendientes() {
+        <table>
+            <thead>
+                <tr>
+                    <th>Material</th>
+                    <th>Cantidad</th>
+                    <th>Entregado</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Cable rojo 1.5mm</td>
+                    <td>5 metros</td>
+                    <td style="text-align:center;">
+                        <input type="checkbox">
+                    </td>
+                </tr>
+                <tr>
+                    <td>Tester digital</td>
+                    <td>1 unidad</td>
+                    <td style="text-align:center;">
+                        <input type="checkbox">
+                    </td>
+                </tr>
+                <tr>
+                    <td>Destornillador plano</td>
+                    <td>2 unidades</td>
+                    <td style="text-align:center;">
+                        <input type="checkbox">
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
-    const { data: solicitudes, error } = await supabaseClient
-        .from("solicitudes")
-        .select("*")
-        .eq("estado", "pendiente")
-        .order("fecha_solicitud", { ascending: true });
+        <button class="btnCompletar">Completar Entrega</button>
+    </div>
 
-    if (error) {
-        console.error("Error al cargar solicitudes:", error);
-        return;
-    }
+    <!-- FIN DE UNA SOLICITUD -->
 
-    const contenedor = document.getElementById("listaSolicitudes");
-    contenedor.innerHTML = "";
+    <button class="btnVolver" onclick="location.href='menu.html'">Volver</button>
 
-    for (const sol of solicitudes) {
+</div>
 
-        // Cargar materiales asociados
-        const { data: materiales } = await supabaseClient
-            .from("materiales_solicitados")
-            .select("*")
-            .eq("id_solicitud", sol.id);
-
-        let matHTML = "";
-        materiales.forEach(m => {
-            matHTML += `<li>${m.material} — Cant: ${m.cantidad}</li>`;
-        });
-
-        contenedor.innerHTML += `
-            <div style="border:1px solid #ccc;padding:10px;margin:10px;">
-                <p><strong>ID:</strong> ${sol.id}</p>
-                <p><strong>Email:</strong> ${sol.email}</p>
-                <p><strong>Docente:</strong> ${sol.docente}</p>
-                <p><strong>Asignatura:</strong> ${sol.asignatura}</p>
-                <p><strong>Fecha solicitud:</strong> ${sol.fecha_solicitud}</p>
-
-                <p><strong>Materiales solicitados:</strong></p>
-                <ul>${matHTML}</ul>
-
-                <button onclick="entregar(${sol.id})">Entregar</button>
-            </div>
-        `;
-    }
-}
-
-// ===============================
-// ENTREGAR (ACTUALIZA ESTADO + FECHA_ENTREGA)
-// ===============================
-async function entregar(idSolicitud) {
-
-    const fechaHoy = new Date().toISOString().slice(0, 10); // YYYY-MM-DD
-
-    const { error } = await supabaseClient
-        .from("solicitudes")
-        .update({
-            estado: "entregado",
-            fecha_entrega: fechaHoy
-        })
-        .eq("id", idSolicitud);
-
-    if (error) {
-        console.error("Error al registrar entrega:", error);
-        alert("Error al registrar entrega: " + error.message);
-        return;
-    }
-
-    alert("Entrega registrada correctamente.");
-    cargarSolicitudesPendientes();
-}
-
-// Iniciar carga
-cargarSolicitudesPendientes();
-
-</script>
 </body>
 </html>
-
-
 
